profile dark mode fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,16 +16,32 @@
     border: 2px solid #d1d5db;
   }
   body {
-  background-color: white;
-  color: black;
-}
-
-
-body.dark {
-  background-color: black;
-  color: white;
-}
-
+    transition: background-color 0.5s ease, color 0.5s ease;
+  }
+  
+  body.light {
+    background-color: white;
+    color: black;
+  }
+  
+  body.dark {
+    background-color: black;
+    color: white;
+  }
+  
+  input {
+    transition: background-color 0.5s ease, color 0.5s ease;
+  }
+  
+  input.dark {
+    background-color: #333;
+    color: white;
+  }
+  
+  input.light {
+    background-color: white;
+    color: black;
+  }
 
   .custom-radio-checked {
     background-color: #d1d5db; 
